# Project_ROB8

./: .gitignore  README.md
atomic_configure/: setup.sh
beginner_tutorials/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
beginner_tutorials/catkin_generated/installspace/: beginner_tutorials.pc  beginner_tutorialsConfig.cmake
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: beginner_tutorials.pc  jaco_moveit_config.pc  move_robot.pc  project_group852.pc
jaco_moveit_config/: CMakeLists.txt  package.xml
jaco_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
jaco_moveit_config/launch/: gazebo.launch  planning_context.launch  run_benchmark_ompl.launch  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
matlab/: one_movement_detection.mlx  one_movement_detection_data.mat
matlab/Datasets/: realtime_testing_eeg.mat
matlab/ROS/: publish_to_ros.m  publish_to_single_move_ros.m
matlab/scripts/: MRCP_LDA.m  bandpass_filter_8ch.m  blink_lda.m  classify_epoch.m  extract_epochs.m  extract_features.m  get_EEG_data.mlapp  handle_data.m  lda.mat  real_time_interface.slx  set_epochs.m  test.m
src/gazebo/jaco/: CMakeLists.txt  package.xml
src/gazebo/jaco/launch/: robot_launch.launch
src/gazebo/jaco/scripts/: interface.py  single_move.py
src/gazebo/jaco/worlds/: jaco.world
src/jaco_moveit_config/: .setup_assistant
src/jaco_moveit_config/config/: gazebo_j2n6s300.urdf  j2n6s300.srdf  (+3 more)
src/project_group852/: CMakeLists.txt  package.xml
src/project_group852/kinova_description/: package.xml
src/project_group852/kinova_description/urdf/: j2n6s300.xacro  kinova_common.xacro
(+35 files in other folders)
