<?xml version="1.0"?>
<package format="2">
  <name>kinova_description</name>
  <version>0.0.0</version>
  <description>The kinova_description package</description>
  <maintainer email="laia@todo.todo">laia</maintainer>
  <author>Kinova ROS Support</author>
  <license>TODO</license>
  <url>http://ros.org/wiki/kinova_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>


